--- a/views/layouts/layout-signin.hbs
+++ b/views/layouts/layout-signin.hbs
@@ -9,8 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/SignIn.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/SignIn.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon.svg">
     <title>{{title}}</title>
     <style>
