--- a/Pages/css/FeedDisplay.css
+++ b/Pages/css/FeedDisplay.css
@@ -50,7 +50,9 @@ body {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    margin-right: var(--block-content-border-radius);;
+    overflow: hidden;
+    margin-top: 3px;
+    flex-shrink: 0;
 }
 
 .post-info {
@@ -198,12 +200,12 @@ textarea {
     width: 100%;
     height: 100%;
     border-radius: 20px;
-    margin-left: -10px;
     padding-left: 10px;
+    background-color: var(--hover-background-color);
 }
 
 .add-post-block:hover {
-    background-color: var(--hover-background-color);
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 .comment-input {
@@ -236,6 +238,7 @@ textarea {
     position: relative;
     padding: 10px 0px;
     border-radius: 5px;
+    background-color: var(--hover-background-color);
 }
 
 .post-block p {
@@ -339,16 +342,6 @@ textarea {
     display: flex;
     align-items: flex-start;
     width: 100%;
-}
-
-.profile-pic {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    overflow: hidden;
-    margin-right: 10px;
-    margin-top: 3px;
-    flex-shrink: 0;
 }
 
 .profile-pic img {
