--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -37,14 +37,18 @@
 
         fetch("/api/auth/signin", {
             method: "POST",
-            body: new FormData(document.querySelector("form"))
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(Object.fromEntries(new FormData(document.querySelector("form"))))
         })
             .then(res => res.json())
             .then(data => {
+                console.log(data)
                 if (data.error) {
                     document.querySelector("#out").innerText = data.error
                 } else {
-                    window.location.href = "/dashboard"
+                    window.location.href = "/"
                 }
             })
     }
